apps/vite-vue/vite-react/tests/jest.setup.js
// jest.setup.js
import '@testing-library/jest-dom';

// AVOID in tests
// TypeError: expect(...).toHaveTextContent is not a function